# shared-libs

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
docs/: migration-guide.md  tracing-guide.md
docs/examples/: README.md
go/: README.md  go.mod  go.sum
go/auth/: README.md  constants.go  context.go  cookie.go  errors.go  helpers.go  internal_auth.go  jwt.go  middleware.go  scope.go  types.go  verifier.go
go/compressor/: README.md  compressor.go  compressor_test.go  config.go  constants.go  errors.go  factory.go  (+2 more)
integration-tests/: README.md  direct_test.py  go.mod  go.sum  minimal_test.py  run_tests.sh  simple_go_test.go  simple_test.py  test_cross_language.py  test_error_handling.py  test_performance.py
python/: README.md  example_database_usage.py  example_http_simple.py  example_http_usage.py  migration_example.py  pyproject.toml  test_database_trace_logging.py  test_http_basic.py  test_migration.py  uap_url.py
python/smap_shared/: __init__.py
python/smap_shared/http/: README.md  __init__.py  client.py  middleware.py  test_client.py  test_utils.py  utils.py
python/smap_shared/kafka/: README.md  __init__.py  config.py  constants.py  consumer.py  interfaces.py  migration_example.py  producer.py  test_kafka.py  wrapper.py
python/smap_shared/logger/: MIGRATION.md  README.md  TASK_COMPLETION.md  __init__.py  compat.py  config.py  constants.py  examples.py  interfaces.py  logger.py  test_logger.py
python/smap_shared/postgres/: README.md  __init__.py  client.py  config.py  constants.py  interfaces.py
python/smap_shared/redis/: README.md  __init__.py  client.py  config.py  constants.py  interfaces.py
python/smap_shared/tracing/: __init__.py  context.py  errors.py  factory.py  http.py  interfaces.py  kafka.py  middleware.py  validation.py
(+143 files in other folders)
